* renamed strategy into sl